--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
   },
   "extra": {
     "laravel": {
-      "providers": [
-        "Anthonycv\\JwtManager\\Auth\\AuthServiceProvider"
+      "dont-discover": [
       ]
     }
   },
