--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,12 @@
     "json",
     "web",
     "token",
-    "stormwind",
+    "jwt",
+    "auth",
+    "anthony",
+    "castro",
+    "anthonycv",
+    "saru",
     "whitelist",
     "auth"
   ],
